--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
     "autoload": {
         "psr-4": {
             "Src\\": "src/"
-        }
+        },
+        "files": [
+            "src/Helpers/system.php"
+        ]
     },
     "authors": [
         {
@@ -15,5 +18,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "predis/predis": "^3.0@alpha",
+        "vlucas/phpdotenv": "^5.6@dev"
+    }
 }
