--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "minimum-stability": "dev",
     "require": {
         "predis/predis": "^3.0@alpha",
-        "vlucas/phpdotenv": "^5.6@dev"
+        "vlucas/phpdotenv": "^5.6@dev",
+        "nesbot/carbon": "^3.0@dev"
     }
 }
